[workspace]
members = [
    "common",
    "parser",
    "wasm-bridge",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2021"
publish = false
homepage = "https://hurryabit.github.io/felix"
repository = "https://github.com/hurryabit/felix.git"
license = "Apache 2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen = "0.2.93"
