[workspace]
members = [
    "common",
    "parser",
    "type-checker",
    "wasm-bridge",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2021"
publish = false
homepage = "https://hurryabit.github.io/felix"
repository = "https://github.com/hurryabit/felix.git"
license = "Apache 2.0"

[workspace.dependencies]
rowan = { git = "https://github.com/hurryabit/rowan.git", branch = "split-kinds"}
serde = { version = "1.0", features = ["derive"] }
tsify-next = { version = "0.5.4", features = ["js"] }
wasm-bindgen = "0.2.93"
