[package]
name = "felix-common"
description = "felix' common functionality shared between different stages"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
