[package]
name = "felix-parser"
description = "felix' parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
logos = "0.14.2"
rowan = { version = "0.15.16", features = ["serde1"] }

[dev-dependencies]
insta = { version = "1.40.0", features = ["ron"] }
