[package]
name = "felix-parser"
description = "felix' parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert_matches.workspace = true
enumset = "1.1.5"
felix-common = { path = "../common" }
logos = "0.14.2"
rowan.workspace = true
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.40.0", features = ["ron"] }
pretty_assertions.workspace = true
