[package]
name = "felix-type-checker"
description = "felix' type checker implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert_matches = "1.5.0"
