[package]
name = "felix-type-checker"
description = "felix' type checker implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert_matches.workspace = true
derive_more = { version = "1.0.0", features = ["from", "into", "try_from", "try_into"] }
trait-gen = "0.3.2"
