[package]
name = "felix-wasm-bridge"
description = "felix' WebAssembly bridge between Rust and JavaScript"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen = "0.2.93"
