[package]
name = "felix-wasm-bridge"
description = "felix' WebAssembly bridge between Rust and JavaScript"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
felix-common = { path = "../common" }
felix-parser = { path = "../parser" }
serde.workspace = true
tsify-next.workspace = true
wasm-bindgen.workspace = true
